--- a/Clase10/src/views/index.handlebars
+++ b/Clase10/src/views/index.handlebars
@@ -1,10 +1,7 @@
 <div>
     <h1>Enviar String</h1>
 </div>
-<form action="http://localhost:8080/api" method="post">
-    <input type="text" placeholder="string" name="input"> 
-    <input type="submit" value="enviar">
-    
-</form>
+<input type="text" placeholder="string" name='input' id="input"> 
+<button id="enviar">Enviar</button>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
