--- a/Segunda entrega/src/views/realTimeProducts.handlebars
+++ b/Segunda entrega/src/views/realTimeProducts.handlebars
@@ -7,17 +7,18 @@
 </head>
 <body>
     <h1>Cargar producto</h1>
-    <form action="">
+    <form action="" id="form">
 
-        <input type="text" id="id" placeholder="id"> <br><br>
         <input type="text" id="title" placeholder="title"> <br><br>
         <input type="text" id="description" placeholder="description"><br><br>
         <input type="text" id="code" placeholder="code"><br><br>
         <input type="text" id="price" placeholder="price"><br><br>
         <input type="text" id="stock" placeholder="stock"><br><br>
         <input type="text" id="category" placeholder="category"><br><br>
-        <button type="submit">registar</button>
+        <button type="submit" id='submit'>registar</button>
 
     </form>
 </body>
 </html>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/js/index.js"></script>
