--- a/Segunda entrega/src/views/realTimeProducts.handlebars
+++ b/Segunda entrega/src/views/realTimeProducts.handlebars
@@ -14,7 +14,7 @@
 
         .container {
             display: flex;
-            height: 100vh; /* Altura completa de la ventana */
+            height: 100dvh; /* Altura completa de la ventana */
         }
 
         .container2 {
