--- a/Segunda entrega/src/views/realTimeProducts.handlebars
+++ b/Segunda entrega/src/views/realTimeProducts.handlebars
@@ -81,4 +81,4 @@
 </body>
 </html>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/realtimeproducts.js"></script>
