--- a/Segunda entrega/src/views/realTimeProducts.handlebars
+++ b/Segunda entrega/src/views/realTimeProducts.handlebars
@@ -75,7 +75,9 @@
         </div>
         <div class="derecha">
             <h1>Lista de productos</h1>
+            <div class="chat-input">
             <textarea id='texto' cols="100" rows="15" style="resize: both;"></textarea>
+            </div>
         </div>
     </div>
 </body>
